--- a/index.html
+++ b/index.html
@@ -120,6 +120,16 @@
       z-index: 10;
     }
   </style>
+
+  <!-- Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QGGREKNJDX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-QGGREKNJDX');
+</script>
+
 </head>
 <body>
 <div id="lang-toggle">EN</div>
