--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>3DNA  – Visual Marketing y Experiencias Inmersivas 3D </title>
   <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
+  <!-- favicon для PNG -->
+<link rel="icon" type="image/png" href="img/favicon_32x32.png">
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     html, body {
