--- a/index.html
+++ b/index.html
@@ -132,6 +132,16 @@
   gtag('config', 'G-QGGREKNJDX');
 </script>
 
+  <header>
+  <img src="img/lg.png" alt="3DNA Logo">
+  <div class="lang-select">
+    <button onclick="setLang('es')" id="btn-es">ES</button>
+    <button onclick="setLang('en')" id="btn-en">EN</button>
+    <button onclick="setLang('ar')" id="btn-ar">AR</button>
+  </div>
+</header>
+
+
 </head>
 <body>
 <div id="lang-toggle">EN</div>
