--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       transition: 0.3s;
     }
     .cta-button:hover {
-      background-color: ligthblue;
+      background-color: white;
       color: black;
     }
     .gallery {
