--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
       font-size: 1.2rem;
       background-color: transparent;
       color: white;
-      border: 0.8px solid white;
-      border-radius: 20px;
+      border: 0.5px solid white;
+      border-radius: 40px;
       cursor: pointer;
       transition: 0.3s;
     }
@@ -204,7 +204,7 @@ header img {
     <div class="lang-es">
       <h1>Estrategias 3D creativas para negocios</h1>
       <p>Explora experiencias visuales inmersivas</p>
-      <button class="cta-button" onclick="document.getElementById('sec2').scrollIntoView({behavior:'smooth'})">EMPEZAR</button>
+      <button class="cta-button" onclick="document.getElementById('sec2').scrollIntoView({behavior:'smooth'})">empezar</button>
     </div>
     <div class="lang-en" style="display:none">
       <h1>Creative 3D strategies for business</h1>
