--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>3DNA  – Visual Marketing y Experiencias Inmersivas 3D </title>
+  <title>3DNA  – Visual Marketing Branding y Experiencias Inmersivas 3D </title>
   <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
   <!-- favicon для PNG -->
 <link rel="icon" type="image/png" href="img/favicon_32x322.png">
@@ -45,9 +45,16 @@
       z-index: -1;
     }
     .content {
-      z-index: 1;
-      padding: 20px;
-    }
+  z-index: 1;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  max-width: 800px;
+  margin-left: 5vw;
+  text-align: left;
+}
+
     .logo {
       width: 40vw;
       max-width: 300px;
