--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@ header img {
   <div class="content">
     <img src="img/lg.png" alt="3DNA Logo" class="logo">
     <div class="lang-es">
-      <h1>Estrategias 3D creativas para negocios</h1>
-      <p>Explora experiencias visuales inmersivas</p>
+      <h1>Marketing creativo, branding, diseño, promoción y publicidad</h1>
+      <p>Soluciones visuales 3D para marcas que quieren destacar</p>
       <button class="cta-button" onclick="document.getElementById('sec2').scrollIntoView({behavior:'smooth'})">empezar</button>
     </div>
     <div class="lang-en" style="display:none">
