--- a/index.html
+++ b/index.html
@@ -46,14 +46,16 @@
     }
     .content {
   z-index: 1;
-  padding: 20px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  max-width: 800px;
-  margin-left: 5vw;
-  text-align: left;
+  justify-content: flex-start;
+  padding: 20px;
+  min-height: 100vh;
+  max-width: 100%;
+  box-sizing: border-box;
 }
+
 
     .logo {
       width: 40vw;
