--- a/index.html
+++ b/index.html
@@ -178,6 +178,15 @@ header img {
   text-decoration: underline;
 }
 
+    @media (max-width: 768px) {
+  .button-block {
+    margin-top: auto;
+    margin-bottom: 8vh;
+    align-self: flex-start;
+  }
+}
+
+
     
   </style>
 
