--- a/index.html
+++ b/index.html
@@ -232,33 +232,33 @@ header img {
 
 </head>
 <body>
-<div id="lang-toggle">EN</div>
-<section id="hero">
-  <video class="video-bg" autoplay muted loop>
-    <source src="img/screen7.mp4" type="video/mp4">
-  </video>
-  <div class="overlay"></div>
-  <div class="content">
-  <!-- Логотип по центру -->
-  <div class="logo-container" style="width: 100%; display: flex; justify-content: center; margin-bottom: 30px;">
-    <img src="img/lg.png" alt="3DNA Logo" class="logo" />
-  </div>
+  <div id="lang-toggle">EN</div>
+  <section id="hero">
+    <video class="video-bg" autoplay muted loop>
+      <source src="img/screen7.mp4" type="video/mp4">
+    </video>
+    <div class="overlay"></div>
+    <div class="content">
+      <!-- Логотип по центру -->
+      <div class="logo-container" style="width: 100%; display: flex; justify-content: center; margin-bottom: 30px;">
+        <img src="img/lg.png" alt="3DNA Logo" class="logo" />
+      </div>
 
-  <!-- Блок с текстом и кнопкой прижат к левому краю -->
-  <div class="text-wrapper">
-    <h1 class="hero-title">
-      MARKETING CREATIVO, BRANDING, DISEÑO 3D Y PROMOCIÓN VISUAL
-    </h1>
+      <!-- Блок с текстом и кнопкой прижат к левому краю и опущен вниз -->
+      <div class="text-wrapper" style="margin-top: 30vh; margin-left: 5vw; text-align: left; max-width: 90vw;">
+        <h1 class="hero-title">
+          MARKETING CREATIVO, BRANDING, DISEÑO 3D Y PROMOCIÓN VISUAL
+        </h1>
 
-    <p class="hero-subtitle">
-      LANZAMOS TU MARCA CON EXPERIENCIAS INMERSIVAS E IMPACTO REAL
-    </p>
+        <p class="hero-subtitle">
+          LANZAMOS TU MARCA CON EXPERIENCIAS INMERSIVAS E IMPACTO REAL
+        </p>
 
-    <button class="cta-button" onclick="document.getElementById('sec2').scrollIntoView({behavior:'smooth'})">
-      empezar
-    </button>
-  </div>
-</div>
+        <button class="cta-button" onclick="document.getElementById('sec2').scrollIntoView({behavior:'smooth'})">
+          empezar
+        </button>
+      </div>
+    </div>
 
 
 
