--- a/index.html
+++ b/index.html
@@ -240,7 +240,8 @@ header img {
     <div class="overlay"></div>
     <div class="content">
       <!-- Логотип по центру -->
-      <div class="logo-container" style="width: 100%; display: flex; justify-content: center; margin-bottom: 30px;">
+      <div class="logo-container" style="width: 100%; display: flex; justify-content: center; margin-top: 10vh; margin-bottom: 30px;">
+
         <img src="img/lg.png" alt="3DNA Logo" class="logo" />
       </div>
 
