--- a/index.html
+++ b/index.html
@@ -61,16 +61,12 @@
       max-width: 300px;
     }
     .cta-button {
-      margin-top: 20px;
-      padding: 12px 32px;
-      font-size: 1.2rem;
-      background-color: transparent;
-      color: white;
-      border: 0.5px solid white;
-      border-radius: 40px;
-      cursor: pointer;
-      transition: 0.3s;
-    }
+  font-family: 'Staatliches', sans-serif;
+  font-size: 1.3rem; /* аналогично тексту выше */
+  letter-spacing: 0.5px;
+  text-transform: uppercase; /* если хочешь капс как у заголовка */
+}
+
     .cta-button:hover {
       background-color: white;
       color: black;
