--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@ header img {
     </p>
 
     <button class="cta-button" onclick="document.getElementById('sec2').scrollIntoView({behavior:'smooth'})">
-      empezar
+      Descúbrelo
     </button>
   </div>
 </div>
