--- a/index.html
+++ b/index.html
@@ -219,6 +219,14 @@ header img {
   opacity: 0;
 }
 
+    .site-title {
+  font-family: 'Staatliches', sans-serif;
+  font-size: 2rem;
+  color: white;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+}
+
 
     
   </style>
@@ -233,13 +241,14 @@ header img {
 </script>
 
   <header>
-  <img src="img/lg.png" alt="3DNA Logo">
+  <div class="site-title">3DNA</div>
   <div class="lang-select">
     <button onclick="setLang('es')" id="btn-es">ES</button>
     <button onclick="setLang('en')" id="btn-en">EN</button>
     <button onclick="setLang('ar')" id="btn-ar">AR</button>
   </div>
 </header>
+
 
 
 </head>
