--- a/index.html
+++ b/index.html
@@ -219,28 +219,14 @@ header img {
   opacity: 0;
 }
 
-    .site-title {
-  font-family: 'Staatliches', sans-serif;
-  font-size: 1.2rem;
-  color: white;
-  letter-spacing: 1px;
-  text-transform: uppercase;
-       margin-left: 5vw; /* Мобильное выравнивание по левому краю текста */
-}
-
-@media (min-width: 768px) {
-  .site-title {
-    margin-left: 40px;
-  }
-}
-    .site-title-wrapper {
+   .site-title-wrapper {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   margin-left: 5vw;
 }
 
-/* На десктопе отодвигаем чуть меньше, чтобы не было слишком широкого поля */
+/* На десктопе — чуть меньше отступ */
 @media (min-width: 768px) {
   .site-title-wrapper {
     margin-left: 40px;
@@ -257,12 +243,14 @@ header img {
 
 .site-subtitle {
   font-family: 'Staatliches', sans-serif;
-  font-size: 0.5rem;
+  font-size: 1rem;
   color: white;
   opacity: 0.7;
-  margin-top: 0.5px;
+  margin-top: 2px;
   letter-spacing: 0.5px;
+  text-align: left;
 }
+
 
     
   </style>
