--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ header img {
 
 .site-title {
   font-family: 'Staatliches', sans-serif;
-  font-size: 2rem;
+  font-size: 0.8rem;
   color: white;
   letter-spacing: 1px;
   text-transform: uppercase;
@@ -243,8 +243,8 @@ header img {
 
 .site-subtitle {
   font-family: 'Staatliches', sans-serif;
-  font-size: 1rem;
-  color: white;
+  font-size: 0.5rem;
+  color: rgb(58, 193, 255);
   opacity: 0.7;
   margin-top: 2px;
   letter-spacing: 0.5px;
