--- a/index.html
+++ b/index.html
@@ -329,16 +329,41 @@ header img {
 </section>
 <div class="spacer"></div>
 <section id="sec2">
-  <video class="video-bg" autoplay muted loop>
+  <video class="video-bg" autoplay muted loop playsinline poster="img/fallback8.jpg">
     <source src="img/screen8.mp4" type="video/mp4">
   </video>
   <div class="overlay"></div>
+
   <div class="content">
-    <h1 class="lang-es">Bienvenido a la experiencia 3DNA</h1>
-    <h1 class="lang-en" style="display:none">Welcome to the 3DNA experience</h1>
-    <button class="cta-button">Entrar a showroom</button>
+    <!-- Логотип -->
+    <div class="logo-container" style="
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      margin-top: 15vh;
+      margin-bottom: 30px;
+    ">
+      <img src="img/lg.png" alt="3DNA Logo" class="logo" />
+    </div>
+
+    <!-- Текст + кнопка -->
+    <div class="text-wrapper" style="
+      margin-left: 5vw;
+      text-align: left;
+      max-width: 90vw;
+      margin-top: 12vh;
+    ">
+      <h1 class="hero-title">BIENVENIDO A LA EXPERIENCIA 3DNA</h1>
+
+      <p class="hero-subtitle">
+        <span id="rotating-text-sec2" class="fade">Descubre nuestro showroom digital</span>
+      </p>
+
+      <button class="cta-button" onclick="alert('Entrando al showroom...')">Entrar a showroom</button>
+    </div>
   </div>
 </section>
+
 <div class="spacer"></div>
 <section class="gallery">
   <img src="https://via.placeholder.com/200x140" alt="Item 1">
