--- a/index.html
+++ b/index.html
@@ -341,18 +341,21 @@ header img {
       max-width: 90vw;
       margin-top: 12vh;
     ">
-      <h1 class="hero-title">EXPERIENCIAS DIGITALES A MEDIDA</h1>
+      <h1 class="hero-title">
+        EXPERIENCIAS DIGITALES A MEDIDA
+      </h1>
 
       <p class="hero-subtitle">
         <span id="rotating-text-sec2" class="fade">Entornos virtuales</span>
       </p>
 
       <button class="cta-button" onclick="alert('Entrando al showroom...')">
-        Entrar a showroom
+        ENTRAR A SHOWROOM
       </button>
     </div>
   </div>
 </section>
+
 
 
 
