--- a/index.html
+++ b/index.html
@@ -336,11 +336,12 @@ header img {
 
   <div class="content">
     <div class="text-wrapper" style="
-      margin-left: 5vw;
-      text-align: left;
-      max-width: 90vw;
-      margin-top: 12vh;
-    ">
+  margin-left: 5vw;
+  text-align: left;
+  max-width: 90vw;
+  margin-top: 27vh; /* ✅ увеличен отступ */
+">
+
       <h1 class="hero-title">
         EXPERIENCIAS DIGITALES A MEDIDA
       </h1>
