--- a/index.html
+++ b/index.html
@@ -252,6 +252,14 @@ header img {
   text-align: left;
 }
 
+.section-text-block {
+  margin-left: 5vw;
+  margin-right: 5vw;
+  text-align: left;
+  max-width: 90vw;
+  margin-top: 27vh; /* компенсируем отсутствие логотипа */
+}
+
 
     
   </style>
@@ -335,16 +343,8 @@ header img {
   <div class="overlay"></div>
 
   <div class="content">
-    <div class="text-wrapper" style="
-  margin-left: 5vw;
-  text-align: left;
-  max-width: 90vw;
-  margin-top: 27vh; /* ✅ увеличен отступ */
-">
-
-      <h1 class="hero-title">
-        EXPERIENCIAS DIGITALES A MEDIDA
-      </h1>
+    <div class="section-text-block">
+      <h1 class="hero-title">EXPERIENCIAS DIGITALES A MEDIDA</h1>
 
       <p class="hero-subtitle">
         <span id="rotating-text-sec2" class="fade">Entornos virtuales</span>
@@ -356,6 +356,7 @@ header img {
     </div>
   </div>
 </section>
+
 
 
 
