--- a/index.html
+++ b/index.html
@@ -260,6 +260,9 @@ header img {
   margin-top: 27vh; /* компенсируем отсутствие логотипа */
 }
 
+#sec2 .content {
+  padding-top: 0;
+}
 
     
   </style>
