--- a/index.html
+++ b/index.html
@@ -264,6 +264,12 @@ header img {
   padding-top: 0;
 }
 
+.logo-spacer {
+  width: 100%;
+  height: 15vh; /* такой же как .logo-container в #hero */
+  margin-bottom: 30px; /* как у .logo-container */
+}
+
     
   </style>
 
@@ -346,6 +352,9 @@ header img {
   <div class="overlay"></div>
 
   <div class="content">
+    <!-- Имитация блока логотипа -->
+<div class="logo-spacer"></div>
+
     <div class="section-text-block">
       <h1 class="hero-title">EXPERIENCIAS DIGITALES A MEDIDA</h1>
 
