--- a/index.html
+++ b/index.html
@@ -257,12 +257,11 @@ header img {
   margin-right: 5vw;
   text-align: left;
   max-width: 90vw;
-  margin-top: 12vh; /* компенсируем отсутствие логотипа */
+  margin-top: 12vh;
 }
 
-#sec2 .content {
-  padding-top: 0;
-}
+
+
 
 .logo-spacer {
   width: 100%;
