--- a/index.html
+++ b/index.html
@@ -252,13 +252,7 @@ header img {
   text-align: left;
 }
 
-.section-text-block {
-  margin-left: 5vw;
-  margin-right: 5vw;
-  text-align: left;
-  max-width: 90vw;
-  margin-top: 12vh;
-}
+
 
 
 
@@ -351,19 +345,18 @@ header img {
   <div class="overlay"></div>
 
   <div class="content">
-    <div class="section-text-block">
+    <div class="text-wrapper">
       <h1 class="hero-title">EXPERIENCIAS DIGITALES A MEDIDA</h1>
-
       <p class="hero-subtitle">
         <span id="rotating-text-sec2" class="fade">Entornos virtuales</span>
       </p>
-
       <button class="cta-button" onclick="alert('Entrando al showroom...')">
         ENTRAR A SHOWROOM
       </button>
     </div>
   </div>
 </section>
+
 
 
 
