--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@ header img {
   <div class="overlay"></div>
 
   <div class="content">
-    <div class="text-wrapper">
+    <div class="text-wrapper" style="margin-top: 12vh;">
       <h1 class="hero-title">EXPERIENCIAS DIGITALES A MEDIDA</h1>
       <p class="hero-subtitle">
         <span id="rotating-text-sec2" class="fade">Entornos virtuales</span>
@@ -356,6 +356,7 @@ header img {
     </div>
   </div>
 </section>
+
 
 
 
