--- a/index.html
+++ b/index.html
@@ -263,6 +263,10 @@ header img {
   margin-bottom: 30px; /* как у .logo-container */
 }
 
+#sec2 .content {
+  align-items: flex-start;
+}
+
     
   </style>
 
@@ -345,6 +349,8 @@ header img {
   <div class="overlay"></div>
 
   <div class="content">
+    <div style="height: 15vh; margin-bottom: 30px;"></div>
+
     <div class="text-wrapper" style="margin-top: 12vh;">
       <h1 class="hero-title">EXPERIENCIAS DIGITALES A MEDIDA</h1>
       <p class="hero-subtitle">
