--- a/index.html
+++ b/index.html
@@ -349,9 +349,11 @@ header img {
   <div class="overlay"></div>
 
   <div class="content">
+    <!-- Имитация отступа как у логотипа -->
     <div style="height: 15vh; margin-bottom: 30px;"></div>
 
-    <div class="text-wrapper" style="margin-top: 12vh;">
+    <!-- Текст и кнопка выровнены по левому краю -->
+    <div class="text-wrapper">
       <h1 class="hero-title">EXPERIENCIAS DIGITALES A MEDIDA</h1>
       <p class="hero-subtitle">
         <span id="rotating-text-sec2" class="fade">Entornos virtuales</span>
@@ -362,6 +364,7 @@ header img {
     </div>
   </div>
 </section>
+
 
 
 
