--- a/index.html
+++ b/index.html
@@ -263,8 +263,18 @@ header img {
   margin-bottom: 30px; /* как у .logo-container */
 }
 
+
+
+
 #sec2 .content {
   align-items: flex-start;
+  text-align: left;
+}
+
+#sec2 .text-wrapper {
+  margin-left: 5vw;
+  margin-right: 5vw;
+  text-align: left;
 }
 
     
