--- a/index.html
+++ b/index.html
@@ -359,11 +359,14 @@ header img {
   <div class="overlay"></div>
 
   <div class="content">
-    <!-- Имитация отступа как у логотипа -->
-    <div style="height: 15vh; margin-bottom: 30px;"></div>
+    <div style="width: 100%; display: flex; justify-content: center; margin-top: 15vh; margin-bottom: 30px;"></div>
 
-    <!-- Текст и кнопка выровнены по левому краю -->
-    <div class="text-wrapper">
+    <div class="text-wrapper" style="
+      margin-left: 5vw;
+      text-align: left;
+      max-width: 90vw;
+      margin-top: 12vh;
+    ">
       <h1 class="hero-title">EXPERIENCIAS DIGITALES A MEDIDA</h1>
       <p class="hero-subtitle">
         <span id="rotating-text-sec2" class="fade">Entornos virtuales</span>
@@ -374,6 +377,7 @@ header img {
     </div>
   </div>
 </section>
+
 
 
 
