--- a/index.html
+++ b/index.html
@@ -357,17 +357,28 @@ header img {
     <source src="img/screen8.mp4" type="video/mp4">
   </video>
   <div class="overlay"></div>
-
   <div class="content">
-    <div style="width: 100%; display: flex; justify-content: center; margin-top: 15vh; margin-bottom: 30px;"></div>
+    <!-- Пустой блок как логотип -->
+    <div class="logo-container" style="
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      margin-top: 15vh;
+      margin-bottom: 30px;
+    ">
+      <!-- можно вставить пустой див или логотип если хочешь -->
+    </div>
 
+    <!-- Текст и кнопка -->
     <div class="text-wrapper" style="
       margin-left: 5vw;
       text-align: left;
       max-width: 90vw;
       margin-top: 12vh;
     ">
-      <h1 class="hero-title">EXPERIENCIAS DIGITALES A MEDIDA</h1>
+      <h1 class="hero-title">
+        EXPERIENCIAS DIGITALES A MEDIDA
+      </h1>
       <p class="hero-subtitle">
         <span id="rotating-text-sec2" class="fade">Entornos virtuales</span>
       </p>
@@ -377,6 +388,7 @@ header img {
     </div>
   </div>
 </section>
+
 
 
 
