--- a/index.html
+++ b/index.html
@@ -369,13 +369,15 @@ header img {
       <!-- можно вставить пустой див или логотип если хочешь -->
     </div>
 
-    <!-- Текст и кнопка -->
-    <div class="text-wrapper" style="
-      margin-left: 5vw;
-      text-align: left;
-      max-width: 90vw;
-      margin-top: 12vh;
-    ">
+    <!-- Текст и кнопка — НЕ зависят от логотипа -->
+  <div class="text-wrapper" style="
+  margin-left: 5vw;
+  text-align: left;
+  max-width: 90vw;
+  margin-top: 50vh;
+
+
+
       <h1 class="hero-title">
         EXPERIENCIAS DIGITALES A MEDIDA
       </h1>
