--- a/index.html
+++ b/index.html
@@ -357,30 +357,17 @@ header img {
     <source src="img/screen8.mp4" type="video/mp4">
   </video>
   <div class="overlay"></div>
+
   <div class="content">
-    <!-- Пустой блок как логотип -->
-    <div class="logo-container" style="
-      width: 100%;
-      display: flex;
-      justify-content: center;
-      margin-top: 15vh;
-      margin-bottom: 30px;
+    <div style="width: 100%; display: flex; justify-content: center; margin-top: 15vh; margin-bottom: 30px;"></div>
+
+    <div class="text-wrapper" style="
+      margin-left: 5vw;
+      text-align: left;
+      max-width: 90vw;
+      margin-top: 12vh;
     ">
-      <!-- можно вставить пустой див или логотип если хочешь -->
-    </div>
-
-    <!-- Текст и кнопка — НЕ зависят от логотипа -->
-  <div class="text-wrapper" style="
-  margin-left: 5vw;
-  text-align: left;
-  max-width: 90vw;
-  margin-top: 12vh;
-
-
-
-      <h1 class="hero-title">
-        EXPERIENCIAS DIGITALES A MEDIDA
-      </h1>
+      <h1 class="hero-title">EXPERIENCIAS DIGITALES A MEDIDA</h1>
       <p class="hero-subtitle">
         <span id="rotating-text-sec2" class="fade">Entornos virtuales</span>
       </p>
@@ -390,7 +377,6 @@ header img {
     </div>
   </div>
 </section>
-
 
 
 
