--- a/index.html
+++ b/index.html
@@ -195,6 +195,15 @@ header img {
   max-width: 90vw;       /* 👈 Можно добавить, чтобы было как inline */
 }
 
+
+.text-wrapper2 {
+  margin-top: 20vh;     /* 👈 Добавляем это */
+  margin-left: 5vw;
+  margin-right: 5vw;
+  text-align: left;
+  max-width: 90vw;       /* 👈 Можно добавить, чтобы было как inline */
+}
+
     hero-title {
   font-size: 1.8rem;
   margin-bottom: 10px;
@@ -365,7 +374,7 @@ header img {
     <div style="height: 15vh; margin-bottom: 30px;"></div>
 
     <!-- Текст и кнопка выровнены по левому краю -->
-    <div class="text-wrapper">
+    <div class="text-wrapper2">
       <h1 class="hero-title">EXPERIENCIAS DIGITALES A MEDIDA</h1>
       <p class="hero-subtitle">
         <span id="rotating-text-sec2" class="fade">Entornos virtuales</span>
