--- a/index.html
+++ b/index.html
@@ -197,11 +197,10 @@ header img {
 
 
 .text-wrapper2 {
-  margin-top: 20vh;     /* 👈 Добавляем это */
   margin-left: 5vw;
-  margin-right: 5vw;
   text-align: left;
-  max-width: 90vw;       /* 👈 Можно добавить, чтобы было как inline */
+  max-width: 90vw;
+  margin-top: 12vh;
 }
 
     hero-title {
