--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@ header img {
 
   // Секция #hero — фразы
   const phrases = [
-    "Visuales inmersivos",
+    "Tu proyecto empieza con el contenido que impulsa tu marca y hace crecer tu negocio",
     "Branding creativo",
     "Experiencias que venden",
     "Diseño 3D que impacta",
