--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@ header img {
   // Секция #hero — фразы
   const phrases = [
     "Tu proyecto empieza con el contenido que impulsa tu marca y hace crecer tu negocio",
-    "Branding creativo",
+    "Branding creativo2",
     "Experiencias que venden",
     "Diseño 3D que impacta",
     "Estrategias visuales poderosas",
