--- a/index.html
+++ b/index.html
@@ -429,17 +429,18 @@ header img {
 
   // Секция #hero — фразы
   const phrases = [
+   
+    "Convierte cada idea en una experiencia visual inolvidable",
     "Tu proyecto empieza con el contenido que impulsa tu marca y hace crecer tu negocio",
-    "Branding creativo",
-    "Tu proyecto empieza con el contenido que impulsa tu marca y hace crecer tu negocio",
-    "Experiencias que venden",
-    "Diseño 3D que impacta",
-    "Estrategias visuales poderosas",
-    "Comunicación que se siente",
-    "Marcas que cobran vida",
-    "Contenido que atrapa",
-    "Realidad aumentada con propósito",
-    "Estética que conecta"
+    "Crea impacto. Conecta con emociones. Vende sin esfuerzo",
+    "El contenido no solo informa: inspira, transforma y enamora",
+    "Haz que tu mensaje trascienda pantallas y deje huella",
+    "No es solo marketing. Es una experiencia inmersiva",
+    "La creatividad es tu herramienta más poderosa. Úsala",
+    "Construye una marca que se vea, se sienta y se recuerde",
+    "Lo visual habla más fuerte que mil palabras",
+    "Diseña tu universo. Nosotros lo hacemos realidad",
+    "El futuro es 3D. Y empieza hoy, contigo",
   ];
 
   let current = 0;
