--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>3DNA  – Visual Marketing Branding y Experiencias Inmersivas 3D </title>
   <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
+
   <!-- favicon для PNG -->
 <link rel="icon" type="image/png" href="img/favicon_32x322.png">
   <style>
@@ -225,7 +227,7 @@ header img {
 }
 .fade {
   opacity: 1;
-  transition: opacity 0.6s ease-in-out;
+  transition: opacity 0.9s ease-in-out;
 }
 .fade-out {
   opacity: 0;
@@ -287,6 +289,15 @@ header img {
   margin-right: 5vw;
   text-align: left;
 }
+
+body {
+  font-family: 'IBM Plex Sans', sans-serif;
+}
+
+h1, h2, .hero-title {
+  font-family: 'Staatliches', sans-serif;
+}
+
 
     
   </style>
