--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>3DNA  – Visual Marketing Branding y Experiencias Inmersivas 3D </title>
   <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
 
   <!-- favicon для PNG -->
 <link rel="icon" type="image/png" href="img/favicon_32x322.png">
@@ -291,7 +291,7 @@ header img {
 }
 
 body {
-  font-family: 'IBM Plex Sans', sans-serif;
+  font-family: 'Lato', sans-serif;
 }
 
 h1, h2, .hero-title {
