--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title>3DNA  – Visual Marketing Branding y Experiencias Inmersivas 3D </title>
   <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+
 
 
   <!-- favicon для PNG -->
@@ -292,7 +294,8 @@ header img {
 }
 
 body {
-  font-family: 'Lato', sans-serif;
+  font-family: 'Roboto', sans-serif;
+  
 }
 
 h1, h2, .hero-title {
