--- a/index.html
+++ b/index.html
@@ -294,8 +294,9 @@ header img {
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Staatliches', sans-serif;
   text-transform: uppercase;
+  font-size: 0.6rem;
 }
 
 h1, h2, .hero-title {
