--- a/index.html
+++ b/index.html
@@ -303,6 +303,12 @@ h1, h2, .hero-title {
   font-family: 'Staatliches', sans-serif;
 }
 
+@media (max-width: 767px) {
+  .hero-title {
+    font-size: 2rem !important; /* Принудительно увеличим */
+    line-height: 1.2;
+  }
+}
 
     
   </style>
