--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@ header img {
 
 .text-wrapper2 {
   margin-left: 5vw;
+  margin-right: 5vw;
   text-align: left;
   max-width: 90vw;
   margin-top: 30vh;
