--- a/index.html
+++ b/index.html
@@ -311,6 +311,14 @@ h1, h2, .hero-title {
   }
 }
 
+@media (min-width: 768px) {
+  .text-wrapper2 {
+    margin-left: 10vw;  /* было 5vw, можно 6vw–10vw */
+    margin-right: 5vw;
+    max-width: 60vw;
+  }
+}
+
     
   </style>
 
