--- a/index.html
+++ b/index.html
@@ -319,6 +319,14 @@ h1, h2, .hero-title {
   }
 }
 
+@media (min-width: 1024px) {
+  .text-wrapper2 {
+    margin-left: 40px;
+    margin-right: 5vw;
+    max-width: 700px;
+  }
+}
+
     
   </style>
 
