--- a/index.html
+++ b/index.html
@@ -427,9 +427,10 @@ h1, h2, .hero-title {
 </p>
     
 
-    <button class="cta-button" onclick="document.getElementById('sec2').scrollIntoView({behavior:'smooth'})">
-      Descúbrelo
-    </button>
+    <button class="cta-button open-panel">
+  Descúbrelo
+</button>
+
   </div>
 </div>
 
@@ -554,18 +555,21 @@ h1, h2, .hero-title {
   }, 3500);
 
 
- const panel = document.getElementById('side-panel');
-  const closeBtn = document.getElementById('close-panel');
-  const openBtn = document.querySelector('.cta-button');
 
-  openBtn.addEventListener('click', function (e) {
-    e.preventDefault();
-    panel.classList.add('open');
-  });
 
-  closeBtn.addEventListener('click', function () {
-    panel.classList.remove('open');
-  });
+  const panel = document.getElementById('side-panel');
+const closeBtn = document.getElementById('close-panel');
+const openBtn = document.querySelector('.open-panel');
+
+openBtn.addEventListener('click', function (e) {
+  e.preventDefault();
+  panel.classList.add('open');
+});
+
+closeBtn.addEventListener('click', function () {
+  panel.classList.remove('open');
+});
+
 
 
 
